--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,28 +18,37 @@ jobs:
       fail-fast: false
       matrix:
         include:
-
+          - os: ubuntu-20.04
+            arm: false
+            qt_ver: 5
+            
           - os: ubuntu-20.04
             qt_ver: 5
+            distro: ubuntu20.04
+            arm: true
 
           - os: ubuntu-20.04
             qt_ver: 6
+            arm: false
             qt_host: linux
             qt_version: '6.2.4'
             qt_modules: 'qt5compat qtimageformats'
             qt_path: /home/runner/work/PolyMC/Qt
 
           - os: windows-2022
+            arm: false
             name: "Windows-Legacy"
             msystem: mingw32
             qt_ver: 5
 
           - os: windows-2022
+            arm: false
             name: "Windows"
             msystem: mingw32
             qt_ver: 6
 
           - os: macos-12
+            arm: false
             macosx_deployment_target: 10.14
             qt_ver: 6
             qt_host: mac
@@ -65,6 +74,47 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: 'true'
+          
+      - name: Build (Arm, Qt 5)
+        if: arm == true && qt_ver = 5
+        uses: uraimo/run-on-arch-action@v2
+        with:
+          arch: arm64
+          distro: ${{ matrix.distro }}
+          # cache the image
+          githubToken: ${{ github.token }}
+          
+          setup: |
+            mkdir -p /artifacts
+            
+          dockerRunArgs: | 
+            --volume "/artifacts:/artifacts" --volume "${GITHUB_WORKSPACE}:/polymc"
+          
+          shell: /bin/sh
+          
+          install: |
+            sudo apt-get -y update
+            sudo apt-get -y install git cmake gcc
+            sudo apt-get -y install ninja-build extra-cmake-modules scdoc
+            sudo apt-get -y install qtbase5-dev qtchooser qt5-qmake qtbase5-dev-tools libqt5core5a libqt5network5 libqt5gui5
+          
+          run: |
+            cd /polymc/ 
+            echo 'Configure CMake'
+            cmake -S . -B ${{ env.BUILD_DIR }} -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=${{ inputs.build_type }} -DENABLE_LTO=ON -DLauncher_BUILD_PLATFORM=Linux -DCMAKE_C_COMPILER_LAUNCHER=${{ env.CCACHE_VAR }} -DCMAKE_CXX_COMPILER_LAUNCHER=${{ env.CCACHE_VAR }} -DLauncher_QT_VERSION_MAJOR=${{ matrix.qt_ver }} -G Ninja
+            echo 'Build'
+            cmake --build ${{ env.BUILD_DIR }}
+            echo 'Test'
+            ctest --test-dir build --output-on-failure
+            echo 'Package (Linux)'
+            cmake --install ${{ env.BUILD_DIR }} --prefix ${{ env.INSTALL_DIR }}
+            cd ${{ env.INSTALL_DIR }}
+            tar --owner root --group root -czf /artifacts/PolyMC.tar.gz *
+            cd /polymc/
+            cmake --install ${{ env.BUILD_DIR }} --prefix ${{ env.INSTALL_PORTABLE_DIR }}
+            cmake --install ${{ env.BUILD_DIR }} --prefix ${{ env.INSTALL_PORTABLE_DIR }} --component portable
+            cd ${{ env.INSTALL_PORTABLE_DIR }}
+            tar -czf /artifacts/PolyMC-portable.tar.gz *
 
       - name: 'Setup MSYS2'
         if: runner.os == 'Windows'
@@ -88,7 +138,7 @@ jobs:
             ${{ matrix.qt_ver == 6 && 'qt6-5compat:p' || '' }}
 
       - name: Setup ccache
-        if: runner.os != 'Windows' && inputs.build_type == 'Debug'
+        if: runner.os != 'Windows' && inputs.build_type == 'Debug' && arm == false
         uses: hendrikmuhs/ccache-action@v1.2.1
         with:
           key: ${{ matrix.os }}-qt${{ matrix.qt_ver }}
@@ -104,7 +154,7 @@ jobs:
           ccache -z  # Zero stats
 
       - name: Use ccache on Debug builds only
-        if: inputs.build_type == 'Debug'
+        if: inputs.build_type == 'Debug' && arm == false
         shell: bash
         run: |
           echo "CCACHE_VAR=ccache" >> $GITHUB_ENV
@@ -119,13 +169,14 @@ jobs:
               ${{ matrix.os }}-qt${{ matrix.qt_ver }}
 
       - name: Set short version
+        if: arm == false
         shell: bash
         run: |
           ver_short=`git rev-parse --short HEAD`
           echo "VERSION=$ver_short" >> $GITHUB_ENV
 
       - name: Install Dependencies (Linux)
-        if: runner.os == 'Linux'
+        if: runner.os == 'Linux' && arm == false
         run: |
           sudo apt-get -y update
           sudo apt-get -y install ninja-build extra-cmake-modules scdoc
@@ -137,20 +188,20 @@ jobs:
           brew install ninja extra-cmake-modules
 
       - name: Install Qt (Linux)
-        if: runner.os == 'Linux' && matrix.qt_ver != 6
+        if: runner.os == 'Linux' && matrix.qt_ver != 6 && arm == false
         run: |
           sudo apt-get -y install qtbase5-dev qtchooser qt5-qmake qtbase5-dev-tools libqt5core5a libqt5network5 libqt5gui5
  
       - name: Cache Qt (macOS and AppImage)
         id: cache-qt
-        if: matrix.qt_ver == 6 && runner.os != 'Windows'
+        if: matrix.qt_ver == 6 && runner.os != 'Windows' && arm == false
         uses: actions/cache@v3
         with:
           path: '${{ matrix.qt_path }}/${{ matrix.qt_version }}'
           key: ${{ matrix.qt_host }}-${{ matrix.qt_version }}-"${{ matrix.qt_modules }}"-qt_cache
 
       - name: Install Qt (macOS and AppImage)
-        if: matrix.qt_ver == 6 && runner.os != 'Windows'
+        if: matrix.qt_ver == 6 && runner.os != 'Windows' && arm == false
         uses: jurplel/install-qt-action@v2
         with:
            version: ${{ matrix.qt_version }}
@@ -161,7 +212,7 @@ jobs:
            aqtversion: ==2.1.*
 
       - name: Prepare AppImage (Linux)
-        if: runner.os == 'Linux' && matrix.qt_ver != 5
+        if: runner.os == 'Linux' && matrix.qt_ver != 5 && arm == false
         run: |
           wget "https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage"
           wget "https://github.com/linuxdeploy/linuxdeploy-plugin-appimage/releases/download/continuous/linuxdeploy-plugin-appimage-x86_64.AppImage"
@@ -185,7 +236,7 @@ jobs:
           cmake -S . -B ${{ env.BUILD_DIR }} -DCMAKE_INSTALL_PREFIX=${{ env.INSTALL_DIR }} -DCMAKE_BUILD_TYPE=${{ inputs.build_type }} -DENABLE_LTO=ON -DLauncher_BUILD_PLATFORM=${{ matrix.name }} -DCMAKE_C_COMPILER_LAUNCHER=${{ env.CCACHE_VAR }} -DCMAKE_CXX_COMPILER_LAUNCHER=${{ env.CCACHE_VAR }} -DLauncher_QT_VERSION_MAJOR=${{ matrix.qt_ver }} -G Ninja
 
       - name: Configure CMake (Linux)
-        if: runner.os == 'Linux'
+        if: runner.os == 'Linux' && arm == false
         run: |
           cmake -S . -B ${{ env.BUILD_DIR }} -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=${{ inputs.build_type }} -DENABLE_LTO=ON -DLauncher_BUILD_PLATFORM=Linux -DCMAKE_C_COMPILER_LAUNCHER=${{ env.CCACHE_VAR }} -DCMAKE_CXX_COMPILER_LAUNCHER=${{ env.CCACHE_VAR }} -DLauncher_QT_VERSION_MAJOR=${{ matrix.qt_ver }} -G Ninja
 
@@ -193,8 +244,8 @@ jobs:
       # BUILD
       ##
 
-      - name: Build
-        if: runner.os != 'Windows'
+      - name: Build 
+        if: runner.os != 'Windows' && arm == false
         run: |
           cmake --build ${{ env.BUILD_DIR }}
 
@@ -209,7 +260,7 @@ jobs:
       ##
 
       - name: Test
-        if: runner.os != 'Windows'
+        if: runner.os != 'Windows' && arm == false
         run: |
           ctest --test-dir build --output-on-failure
 
@@ -280,7 +331,7 @@ jobs:
           makensis -NOCD "${{ github.workspace }}/${{ env.BUILD_DIR }}/program_info/win_install.nsi"
 
       - name: Package (Linux)
-        if: runner.os == 'Linux'
+        if: runner.os == 'Linux' && arm == false
         run: |
           cmake --install ${{ env.BUILD_DIR }} --prefix ${{ env.INSTALL_DIR }}
 
@@ -288,7 +339,7 @@ jobs:
           tar --owner root --group root -czf ../PolyMC.tar.gz *
 
       - name: Package (Linux, portable)
-        if: runner.os == 'Linux'
+        if: runner.os == 'Linux' && arm == false
         run: |
           cmake --install ${{ env.BUILD_DIR }} --prefix ${{ env.INSTALL_PORTABLE_DIR }}
           cmake --install ${{ env.BUILD_DIR }} --prefix ${{ env.INSTALL_PORTABLE_DIR }} --component portable
@@ -297,7 +348,7 @@ jobs:
           tar -czf ../PolyMC-portable.tar.gz *
 
       - name: Package AppImage (Linux)
-        if: runner.os == 'Linux' && matrix.qt_ver != 5
+        if: runner.os == 'Linux' && matrix.qt_ver != 5 && arm == false
         shell: bash
         run: |
           cmake --install ${{ env.BUILD_DIR }} --prefix ${{ env.INSTALL_APPIMAGE_DIR }}/usr
@@ -357,35 +408,49 @@ jobs:
           path: PolyMC-Setup.exe
 
       - name: Upload binary tarball (Linux, Qt 5)
-        if: runner.os == 'Linux' && matrix.qt_ver != 6
+        if: runner.os == 'Linux' && matrix.qt_ver != 6 && arm == false
         uses: actions/upload-artifact@v3
         with:
           name: PolyMC-${{ runner.os }}-${{ env.VERSION }}-${{ inputs.build_type }}
           path: PolyMC.tar.gz
 
       - name: Upload binary tarball (Linux, portable, Qt 5)
-        if: runner.os == 'Linux' && matrix.qt_ver != 6
+        if: runner.os == 'Linux' && matrix.qt_ver != 6 && arm == false
         uses: actions/upload-artifact@v3
         with:
           name: PolyMC-${{ runner.os }}-Portable-${{ env.VERSION }}-${{ inputs.build_type }}
-          path: PolyMC-portable.tar.gz
+          path: /artifacts/PolyMC-portable.tar.gz
+          
+      - name: Upload binary tarball (Linux, Qt 5, Arm64)
+        if: runner.os == 'Linux' && matrix.qt_ver != 6 && arm == true
+        uses: actions/upload-artifact@v3
+        with:
+          name: PolyMC-${{ runner.os }}-arm64-${{ env.VERSION }}-${{ inputs.build_type }}
+          path: /artifacts/PolyMC.tar.gz
+
+      - name: Upload binary tarball (Linux, portable, Qt 5, Arm64)
+        if: runner.os == 'Linux' && matrix.qt_ver != 6 && arm == true
+        uses: actions/upload-artifact@v3
+        with:
+          name: PolyMC-${{ runner.os }}-arm64-Portable-${{ env.VERSION }}-${{ inputs.build_type }}
+          path: /artifacts/PolyMC-portable.tar.gz
 
       - name: Upload binary tarball (Linux, Qt 6)
-        if: runner.os == 'Linux' && matrix.qt_ver !=5
+        if: runner.os == 'Linux' && matrix.qt_ver !=5 && arm == false
         uses: actions/upload-artifact@v3
         with:
           name: PolyMC-${{ runner.os }}-Qt6-${{ env.VERSION }}-${{ inputs.build_type }}
           path: PolyMC.tar.gz
 
       - name: Upload binary tarball (Linux, portable, Qt 6)
-        if: runner.os == 'Linux' && matrix.qt_ver != 5
+        if: runner.os == 'Linux' && matrix.qt_ver != 5 && arm == false
         uses: actions/upload-artifact@v3
         with:
           name: PolyMC-${{ runner.os }}-Qt6-Portable-${{ env.VERSION }}-${{ inputs.build_type }}
           path: PolyMC-portable.tar.gz
 
       - name: Upload AppImage (Linux)
-        if: runner.os == 'Linux' && matrix.qt_ver != 5
+        if: runner.os == 'Linux' && matrix.qt_ver != 5 && arm == false
         uses: actions/upload-artifact@v3
         with:
           name: PolyMC-${{ runner.os }}-${{ env.VERSION }}-${{ inputs.build_type }}-x86_64.AppImage
