--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -94,7 +94,7 @@ jobs:
           
           install: |
             apt-get -y update
-            apt-get -y install git cmake gcc g++ sudo openjdk-8-jdk zlib1g
+            apt-get -y install git cmake gcc g++ sudo openjdk-8-jdk zlib1g build-essential 
             apt-get -y install ninja-build extra-cmake-modules scdoc
             apt-get -y install qtbase5-dev qtchooser qt5-qmake qtbase5-dev-tools libqt5core5a libqt5network5 libqt5gui5
           
