--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -151,7 +151,7 @@ jobs:
             apt-get -y update
             apt-get -y install git cmake gcc g++ sudo openjdk-8-jdk build-essential pkg-config zlib1g-dev
             apt-get -y install ninja-build extra-cmake-modules scdoc
-            apt-get -y install qt6-base-dev libqt6core5compat6-dev qt6-base libqt6core5compat6 qt6-image-formats-plugins
+            apt-get -y install qt6-base-dev libqt6core5compat6-dev libqt6concurrent6 libqt6core6 libqt6dbus6 libqt6gui6 libqt6network6 libqt6opengl6 libqt6opengl6-dev libqt6openglwidgets6 libqt6printsupport6 libqt6sql6 libqt6sql6-ibase libqt6sql6-mysql libqt6sql6-odbc libqt6sql6-psql libqt6sql6-sqlite libqt6test6 libqt6widgets6 libqt6xml6 qmake6 qmake6-bin qt6-base-dev qt6-base-dev-tools qt6-base-private-dev qt6-gtk-platformtheme qt6-qpa-plugins qt6-xdgdesktopportal-platformtheme libqt6core5compat6 qt6-image-formats-plugins
           
           run: |
             cd /polymc/ 
