--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -86,90 +86,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: 'true'
-          
-      - name: Build (Linux, Qt 5, Arm64)
-        if: matrix.arm == true && matrix.qt_ver == 5
-        uses: uraimo/run-on-arch-action@v2
-        with:
-          arch: aarch64
-          distro: ${{ matrix.distro }}
-          # cache the image
-          githubToken: ${{ github.token }}
-          
-          setup: |
-            sudo mkdir -p /artifacts
-            
-          dockerRunArgs: | 
-            --volume "/artifacts:/artifacts" --volume "${GITHUB_WORKSPACE}:/polymc"
-          
-          shell: /bin/sh
-          
-          install: |
-            echo ":aaaaaaaaaaaa:"
-            apt-get -y update
-            apt-get -y install git cmake gcc g++ sudo openjdk-8-jdk build-essential pkg-config zlib1g-dev
-            apt-get -y install ninja-build extra-cmake-modules scdoc
-            apt-get -y install qtbase5-dev qtchooser qt5-qmake qtbase5-dev-tools libqt5core5a libqt5network5 libqt5gui5
-          
-          run: |
-            cd /polymc/ 
-            echo 'Configure CMake'
-            cmake -S . -B ${{ env.BUILD_DIR }} -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=${{ inputs.build_type }} -DENABLE_LTO=ON -DLauncher_BUILD_PLATFORM=Linux -DCMAKE_C_COMPILER_LAUNCHER=${{ env.CCACHE_VAR }} -DCMAKE_CXX_COMPILER_LAUNCHER=${{ env.CCACHE_VAR }} -DLauncher_QT_VERSION_MAJOR=${{ matrix.qt_ver }} -G Ninja
-            echo 'Build'
-            cmake --build ${{ env.BUILD_DIR }}
-            echo 'Test'
-            ctest --test-dir build --output-on-failure
-            echo 'Package (Linux)'
-            cmake --install ${{ env.BUILD_DIR }} --prefix ${{ env.INSTALL_DIR }}
-            cd ${{ env.INSTALL_DIR }}
-            tar --owner root --group root -czf /artifacts/PolyMC.tar.gz *
-            cd /polymc/
-            cmake --install ${{ env.BUILD_DIR }} --prefix ${{ env.INSTALL_PORTABLE_DIR }}
-            cmake --install ${{ env.BUILD_DIR }} --prefix ${{ env.INSTALL_PORTABLE_DIR }} --component portable
-            cd ${{ env.INSTALL_PORTABLE_DIR }}
-            tar -czf /artifacts/PolyMC-portable.tar.gz *
-            
-      - name: Build (Linux, Qt 6, Arm64)
-        if: matrix.arm == true && matrix.qt_ver == 6
-        uses: uraimo/run-on-arch-action@v2
-        with:
-          arch: aarch64
-          distro: ${{ matrix.distro }}
-          # cache the image
-          githubToken: ${{ github.token }}
-          
-          setup: |
-            sudo mkdir -p /artifacts
-            
-          dockerRunArgs: | 
-            --volume "/artifacts:/artifacts" --volume "${GITHUB_WORKSPACE}:/polymc"
-          
-          shell: /bin/sh
-          
-          install: |
-            echo ":aaaaaaaaaaaa:"
-            apt-get -y update
-            apt-get -y install git cmake gcc g++ sudo openjdk-8-jdk build-essential pkg-config zlib1g-dev
-            apt-get -y install ninja-build extra-cmake-modules scdoc
-            apt-get -y install qt6-base-dev libqt6core5compat6-dev libqt6concurrent6 libqt6core6 libqt6dbus6 libqt6gui6 libqt6network6 libqt6opengl6 libqt6opengl6-dev libqt6openglwidgets6 libqt6printsupport6 libqt6sql6 libqt6sql6-ibase libqt6sql6-mysql libqt6sql6-odbc libqt6sql6-psql libqt6sql6-sqlite libqt6test6 libqt6widgets6 libqt6xml6 qmake6 qmake6-bin qt6-base-dev qt6-base-dev-tools qt6-base-private-dev qt6-gtk-platformtheme qt6-qpa-plugins qt6-xdgdesktopportal-platformtheme libqt6core5compat6 qt6-image-formats-plugins
-          
-          run: |
-            cd /polymc/ 
-            echo 'Configure CMake'
-            cmake -S . -B ${{ env.BUILD_DIR }} -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=${{ inputs.build_type }} -DENABLE_LTO=ON -DLauncher_BUILD_PLATFORM=Linux -DCMAKE_C_COMPILER_LAUNCHER=${{ env.CCACHE_VAR }} -DCMAKE_CXX_COMPILER_LAUNCHER=${{ env.CCACHE_VAR }} -DLauncher_QT_VERSION_MAJOR=${{ matrix.qt_ver }} -G Ninja
-            echo 'Build'
-            cmake --build ${{ env.BUILD_DIR }}
-            echo 'Test'
-            ctest --test-dir build --output-on-failure
-            echo 'Package (Linux)'
-            cmake --install ${{ env.BUILD_DIR }} --prefix ${{ env.INSTALL_DIR }}
-            cd ${{ env.INSTALL_DIR }}
-            tar --owner root --group root -czf /artifacts/PolyMC.tar.gz *
-            cd /polymc/
-            cmake --install ${{ env.BUILD_DIR }} --prefix ${{ env.INSTALL_PORTABLE_DIR }}
-            cmake --install ${{ env.BUILD_DIR }} --prefix ${{ env.INSTALL_PORTABLE_DIR }} --component portable
-            cd ${{ env.INSTALL_PORTABLE_DIR }}
-            tar -czf /artifacts/PolyMC-portable.tar.gz *
 
       - name: 'Setup MSYS2'
         if: runner.os == 'Windows'
@@ -193,10 +109,10 @@ jobs:
             ${{ matrix.qt_ver == 6 && 'qt6-5compat:p' || '' }}
 
       - name: Setup ccache
-        if: runner.os != 'Windows' && inputs.build_type == 'Debug' && matrix.arm == false
+        if: runner.os != 'Windows' && inputs.build_type == 'Debug'
         uses: hendrikmuhs/ccache-action@v1.2.1
         with:
-          key: ${{ matrix.os }}-qt${{ matrix.qt_ver }}
+          key: ${{ matrix.os }}-qt${{ matrix.qt_ver }}-${{ matrix.arm }}
 
       - name: Setup ccache (Windows)
         if: runner.os == 'Windows' && inputs.build_type == 'Debug'
@@ -219,9 +135,9 @@ jobs:
         uses: actions/cache@v3.0.2
         with:
           path: '${{ github.workspace }}\.ccache'
-          key: ${{ matrix.os }}-qt${{ matrix.qt_ver }}
+          key: ${{ matrix.os }}-qt${{ matrix.qt_ver }}-${{ matrix.arm }}
           restore-keys: |
-              ${{ matrix.os }}-qt${{ matrix.qt_ver }}
+              ${{ matrix.os }}-qt${{ matrix.qt_ver }}-${{ matrix.arm }}
 
       - name: Set short version
         shell: bash
@@ -308,6 +224,104 @@ jobs:
         shell: msys2 {0}
         run: |
           cmake --build ${{ env.BUILD_DIR }}
+          
+      - name: Build (Linux, Qt 5, Arm64)
+        if: matrix.arm == true && matrix.qt_ver == 5
+        uses: uraimo/run-on-arch-action@v2
+        with:
+          arch: aarch64
+          distro: ${{ matrix.distro }}
+          # cache the image
+          githubToken: ${{ github.token }}
+          
+          setup: |
+            sudo mkdir -p /artifacts
+            
+          dockerRunArgs: | 
+            --volume "/artifacts:/artifacts" --volume "${GITHUB_WORKSPACE}:/polymc"
+          
+          shell: /bin/sh
+          
+          install: |
+            echo ":aaaaaaaaaaaa:"
+            apt-get -y update
+            apt-get -y install git cmake gcc g++ sudo openjdk-8-jdk build-essential pkg-config zlib1g-dev
+            apt-get -y install ninja-build extra-cmake-modules scdoc
+            apt-get -y install qtbase5-dev qtchooser qt5-qmake qtbase5-dev-tools libqt5core5a libqt5network5 libqt5gui5
+          
+          run: |
+            cd /polymc/ 
+            if [ "${{ env.CCACHE_VAR }}" = "ccache" ]; then
+            ccache --set-config=cache_dir='/polymc/.ccache'
+            ccache --set-config=max_size='500M'
+            ccache --set-config=compression=true
+            ccache -p  # Show config
+            ccache -z  # Zero stats
+            fi
+            echo 'Configure CMake'
+            cmake -S . -B ${{ env.BUILD_DIR }} -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=${{ inputs.build_type }} -DENABLE_LTO=ON -DLauncher_BUILD_PLATFORM=Linux -DCMAKE_C_COMPILER_LAUNCHER=${{ env.CCACHE_VAR }} -DCMAKE_CXX_COMPILER_LAUNCHER=${{ env.CCACHE_VAR }} -DLauncher_QT_VERSION_MAJOR=${{ matrix.qt_ver }} -G Ninja
+            echo 'Build'
+            cmake --build ${{ env.BUILD_DIR }}
+            echo 'Test'
+            ctest --test-dir build --output-on-failure
+            echo 'Package (Linux)'
+            cmake --install ${{ env.BUILD_DIR }} --prefix ${{ env.INSTALL_DIR }}
+            cd ${{ env.INSTALL_DIR }}
+            tar --owner root --group root -czf /artifacts/PolyMC.tar.gz *
+            cd /polymc/
+            cmake --install ${{ env.BUILD_DIR }} --prefix ${{ env.INSTALL_PORTABLE_DIR }}
+            cmake --install ${{ env.BUILD_DIR }} --prefix ${{ env.INSTALL_PORTABLE_DIR }} --component portable
+            cd ${{ env.INSTALL_PORTABLE_DIR }}
+            tar -czf /artifacts/PolyMC-portable.tar.gz *
+            
+      - name: Build (Linux, Qt 6, Arm64)
+        if: matrix.arm == true && matrix.qt_ver == 6
+        uses: uraimo/run-on-arch-action@v2
+        with:
+          arch: aarch64
+          distro: ${{ matrix.distro }}
+          # cache the image
+          githubToken: ${{ github.token }}
+          
+          setup: |
+            sudo mkdir -p /artifacts
+            
+          dockerRunArgs: | 
+            --volume "/artifacts:/artifacts" --volume "${GITHUB_WORKSPACE}:/polymc"
+          
+          shell: /bin/sh
+          
+          install: |
+            echo ":aaaaaaaaaaaa:"
+            apt-get -y update
+            apt-get -y install git cmake gcc g++ sudo openjdk-8-jdk build-essential pkg-config zlib1g-dev
+            apt-get -y install ninja-build extra-cmake-modules scdoc
+            apt-get -y install qt6-base-dev libqt6core5compat6-dev libqt6concurrent6 libqt6core6 libqt6dbus6 libqt6gui6 libqt6network6 libqt6opengl6 libqt6opengl6-dev libqt6openglwidgets6 libqt6printsupport6 libqt6sql6 libqt6sql6-ibase libqt6sql6-mysql libqt6sql6-odbc libqt6sql6-psql libqt6sql6-sqlite libqt6test6 libqt6widgets6 libqt6xml6 qmake6 qmake6-bin qt6-base-dev qt6-base-dev-tools qt6-base-private-dev qt6-gtk-platformtheme qt6-qpa-plugins qt6-xdgdesktopportal-platformtheme libqt6core5compat6 qt6-image-formats-plugins  libgl1-mesa-dev libglvnd-devel
+          
+          run: |
+            cd /polymc/
+            if [ "${{ env.CCACHE_VAR }}" = "ccache" ]; then
+            ccache --set-config=cache_dir='/polymc/.ccache'
+            ccache --set-config=max_size='500M'
+            ccache --set-config=compression=true
+            ccache -p  # Show config
+            ccache -z  # Zero stats
+            fi
+            echo 'Configure CMake'
+            cmake -S . -B ${{ env.BUILD_DIR }} -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=${{ inputs.build_type }} -DENABLE_LTO=ON -DLauncher_BUILD_PLATFORM=Linux -DCMAKE_C_COMPILER_LAUNCHER=${{ env.CCACHE_VAR }} -DCMAKE_CXX_COMPILER_LAUNCHER=${{ env.CCACHE_VAR }} -DLauncher_QT_VERSION_MAJOR=${{ matrix.qt_ver }} -G Ninja
+            echo 'Build'
+            cmake --build ${{ env.BUILD_DIR }}
+            echo 'Test'
+            ctest --test-dir build --output-on-failure
+            echo 'Package (Linux)'
+            cmake --install ${{ env.BUILD_DIR }} --prefix ${{ env.INSTALL_DIR }}
+            cd ${{ env.INSTALL_DIR }}
+            tar --owner root --group root -czf /artifacts/PolyMC.tar.gz *
+            cd /polymc/
+            cmake --install ${{ env.BUILD_DIR }} --prefix ${{ env.INSTALL_PORTABLE_DIR }}
+            cmake --install ${{ env.BUILD_DIR }} --prefix ${{ env.INSTALL_PORTABLE_DIR }} --component portable
+            cd ${{ env.INSTALL_PORTABLE_DIR }}
+            tar -czf /artifacts/PolyMC-portable.tar.gz *
 
       ##
       # TEST
