--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -125,7 +125,7 @@ jobs:
           ccache -z  # Zero stats
 
       - name: Use ccache on Debug builds only
-        if: inputs.build_type == 'Debug' && matrix.arm == false
+        if: inputs.build_type == 'Debug'
         shell: bash
         run: |
           echo "CCACHE_VAR=ccache" >> $GITHUB_ENV
@@ -245,18 +245,19 @@ jobs:
           install: |
             echo ":aaaaaaaaaaaa:"
             apt-get -y update
-            apt-get -y install git cmake gcc g++ sudo openjdk-8-jdk build-essential pkg-config zlib1g-dev
+            apt-get -y install git cmake gcc g++ sudo openjdk-8-jdk build-essential pkg-config zlib1g-dev ccache
             apt-get -y install ninja-build extra-cmake-modules scdoc
             apt-get -y install qtbase5-dev qtchooser qt5-qmake qtbase5-dev-tools libqt5core5a libqt5network5 libqt5gui5
           
           run: |
             cd /polymc/ 
             if [ "${{ env.CCACHE_VAR }}" = "ccache" ]; then
-            ccache --set-config=cache_dir='/polymc/.ccache'
-            ccache --set-config=max_size='500M'
-            ccache --set-config=compression=true
-            ccache -p  # Show config
-            ccache -z  # Zero stats
+              echo 'Using ccache'
+              ccache --set-config=cache_dir='/polymc/.ccache'
+              ccache --set-config=max_size='500M'
+              ccache --set-config=compression=true
+              ccache -p  # Show config
+              ccache -z  # Zero stats
             fi
             echo 'Configure CMake'
             cmake -S . -B ${{ env.BUILD_DIR }} -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=${{ inputs.build_type }} -DENABLE_LTO=ON -DLauncher_BUILD_PLATFORM=Linux -DCMAKE_C_COMPILER_LAUNCHER=${{ env.CCACHE_VAR }} -DCMAKE_CXX_COMPILER_LAUNCHER=${{ env.CCACHE_VAR }} -DLauncher_QT_VERSION_MAJOR=${{ matrix.qt_ver }} -G Ninja
@@ -294,18 +295,19 @@ jobs:
           install: |
             echo ":aaaaaaaaaaaa:"
             apt-get -y update
-            apt-get -y install git cmake gcc g++ sudo openjdk-8-jdk build-essential pkg-config zlib1g-dev
+            apt-get -y install git cmake gcc g++ sudo openjdk-8-jdk build-essential pkg-config zlib1g-dev ccache
             apt-get -y install ninja-build extra-cmake-modules scdoc
             apt-get -y install qt6-base-dev libqt6core5compat6-dev libqt6concurrent6 libqt6core6 libqt6dbus6 libqt6gui6 libqt6network6 libqt6opengl6 libqt6opengl6-dev libqt6openglwidgets6 libqt6printsupport6 libqt6sql6 libqt6sql6-ibase libqt6sql6-mysql libqt6sql6-odbc libqt6sql6-psql libqt6sql6-sqlite libqt6test6 libqt6widgets6 libqt6xml6 qmake6 qmake6-bin qt6-base-dev qt6-base-dev-tools qt6-base-private-dev qt6-gtk-platformtheme qt6-qpa-plugins qt6-xdgdesktopportal-platformtheme libqt6core5compat6 qt6-image-formats-plugins  libgl1-mesa-dev libglvnd-devel
           
           run: |
             cd /polymc/
             if [ "${{ env.CCACHE_VAR }}" = "ccache" ]; then
-            ccache --set-config=cache_dir='/polymc/.ccache'
-            ccache --set-config=max_size='500M'
-            ccache --set-config=compression=true
-            ccache -p  # Show config
-            ccache -z  # Zero stats
+              echo 'Using ccache'
+              ccache --set-config=cache_dir='/polymc/.ccache'
+              ccache --set-config=max_size='500M'
+              ccache --set-config=compression=true
+              ccache -p  # Show config
+              ccache -z  # Zero stats
             fi
             echo 'Configure CMake'
             cmake -S . -B ${{ env.BUILD_DIR }} -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=${{ inputs.build_type }} -DENABLE_LTO=ON -DLauncher_BUILD_PLATFORM=Linux -DCMAKE_C_COMPILER_LAUNCHER=${{ env.CCACHE_VAR }} -DCMAKE_CXX_COMPILER_LAUNCHER=${{ env.CCACHE_VAR }} -DLauncher_QT_VERSION_MAJOR=${{ matrix.qt_ver }} -G Ninja
